刪除先前測試用html

--- a/FrontEnd/templates/FrontEnd/download/download.html
+++ b/FrontEnd/templates/FrontEnd/download/download.html
@@ -79,12 +79,11 @@
             downloadListSearch() {
                 if (this.type === "") {
                     return this.downloadList.filter(box => {
-                        return box.title.includes(this.search)
+                        return box.title.includes(this.search);
                     })
                 }
             }
         }
-
 
     })
 </script>
