--- a/MakerCenter/collect_static/scss/all.css
+++ b/MakerCenter/collect_static/scss/all.css
@@ -7318,4 +7318,4 @@ section {
       color: white;
       text-align: center; }
 
-/*# sourceMappingURL=all.css.map */
+/*# sourceMappingURL=../../../../static/scss/all.css.map */
