--- a/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
+++ b/FrontEnd/templates/FrontEnd/space_intro/space_intro.html
@@ -4,18 +4,20 @@
 
 {% load static%}
 <link rel="stylesheet" href="{% static 'css/space_intro/space_intro.css' %}">
-<link rel="stylesheet" href="{% static 'base/css/bootstrap/bootstrap.min.css' %}">
-
+<script src="{% static 'js/vue.js' %}"> </script>
+<script src="{% static 'js/axios.min.js' %}"> </script>
 {% endblock %}
 
 {% block main %}
 
-<section class="container-1">
+<section class="container-1" id="app">
     <div class="title-1">空間介紹</div>
-    
-    <div class="searchbox"><p class="searchtext">　Search..</p></div>
-    
-    <table cellpadding="10"; style="width: 100%; " border=" 1px solid; border-collapse:collapse;" class="tablestyle">
+
+    <input class="searchbox" type="text" v-model="search" placeholder="Search ..." />
+
+
+    <!-- <table cellpadding="10" ; style="width: 100%; " border=" 1px solid; border-collapse:collapse;" class="tablestyle"> -->
+    <table class="tablestyle" cellpadding="18" style="word-break:break-all;">
         <thead>
             <tr class="bg-danger" style="height: 80px; ">
                 <th style="width: 10%; padding:25px">教室代碼</th>
@@ -26,16 +28,54 @@
             </tr>
         </thead>
         <tbody style="height: auto;">
-            <tr style="height: 280px; line-height: 32px;">
-            <td style="text-align: center;">A201</td>
-                <td style="padding-left: 20px; padding-right: 20px; text-align: justify;">名稱名稱名稱名稱名稱名稱名稱名稱</td>
-                <td style="padding-left: 20px; padding-right: 20px; text-align: justify;">介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹</td>
-                <td style="text-align: center;">nn-nn</td>
-                <td style="padding-left: 20px; padding-right: 20px; text-align: justify;">介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹</td>                </tr>
+            <tr style="height: 280px; line-height: 32px;" v-for="item in ListSearch">
+                <td style="text-align: center;">${item.code}</td>
+                <td style="padding-left: 20px; padding-right: 20px; text-align: justify;">${item.name}</td>
+                <td style="padding-left: 20px; padding-right: 20px; text-align: justify;">
+                    ${item.space_description}</td>
+                <td style="text-align: center;">${item.number}</td>
+                <td style="padding-left: 20px; padding-right: 20px; text-align: justify;">
+                    ${item.equipment_description}</td>
+            </tr>
         </tbody>
     </table>
 
 
 </section>
+
+
+<script>
+
+    axios.defaults.xsrfCookieName = 'csrftoken';
+    axios.defaults.xsrfHeaderName = 'X-CSRFToken';
+    let downloadVue = new Vue({
+        el: '#app',
+        delimiters: ['${', '}'],
+        data: {
+            search: "",
+            dataList: [],
+        },
+        mounted: function () {
+            axios.post("{% url 'apigetdblist' 'Space' %}")
+                .then((response) => {
+                    let getdata = response.data;
+                    console.log(getdata);
+                    this.dataList = getdata;
+                })
+                .catch((error) => console.log(error));
+        },
+        methods: {
+        }, computed: {
+            ListSearch() {
+                return this.dataList.filter(box => {
+                    return box.name.includes(this.search);
+                })
+            }
+        }
+
+
+    })
+</script>
+
 
 {% endblock %}
