--- a/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
+++ b/FrontEnd/templates/FrontEnd/members_intro/members_intro.html
@@ -17,24 +17,23 @@
 
     <input class="searchbox" type="text" v-model="search" placeholder="Search ..." />
 
-    <!-- <table cellpadding="10"; style="width: 100%; " border=" 1px solid; border-collapse:collapse;" class="tablestyle"> -->
-    <table class="tablestyle" cellpadding="18" style="word-break:break-all;">
+    <table class="tablestyle" cellpadding="20" style="word-break:break-all;">
         <thead>
             <tr class="bg-danger" style="height: 100px; ">
-                <th style="width: 10%; padding-left: 2%;">姓名</th>
-                <th style="width: 17%; padding-left: 2%;">分機</th>
-                <th style="width: 28%; padding-left: 2%;">信箱</th>
-                <th style="width: 26%; padding-left: 2%;">業務職掌</th>
-                <th style="width: 19%; padding-left: 2%;">位置</th>
+                <th style="width: 11%;">姓名</th>
+                <th style="width: 20%;" class="type-2">分機</th>
+                <th style="width: 23%;">信箱</th>
+                <th style="width: 26%;">業務職掌</th>
+                <th style="width: 22%;" class="type-1">位置</th>
             </tr>
         </thead>
         <tbody style="height: auto;">
             <tr style="height: auto; line-height: 32px;" v-for="item in MemeberListSearch">
-                <td style="text-align: left; padding: 2%;">${item.name}</td>
-                <td style="word-break: break-all; padding: 2%; text-align: justify;">${item.extension}</td>
-                <td style="word-break: break-all; padding: 2%; text-align: justify;">${item.email}</td>
-                <td style="text-align: justify; padding:2%;">${item.work}</td>
-                <td style="padding: 2%;  text-align: center;">${item.location}</td>
+                <td style="text-align: left;">${item.name}</td>
+                <td style="text-align: justify;" class="type-2">${item.extension}</td>
+                <td style="text-align: justify;">${item.email}</td>
+                <td style="text-align: justify;">${item.work}</td>
+                <td style="text-align: justify;" class="type-1">${item.location}</td>
             </tr>
         </tbody>
     </table>
