--- a/static/css/download/download.css
+++ b/static/css/download/download.css
@@ -7,7 +7,7 @@
 }
 
 .tablestyle {
-    border: solid 1px;
+    border: solid 2px;
     border-color: #000000;
     border-collapse: collapse;
     margin: 40px auto 70px;
@@ -63,6 +63,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .text-2 {
@@ -75,6 +76,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .text-3 {
@@ -87,6 +89,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .text-4 {
@@ -99,6 +102,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+}
+.type-3{
+    cursor: pointer;
+}
+.type-4{
+    cursor: pointer;
 }
 
 @media (max-width:1172px) {
