--- a/static/css/equipment_intro/equipment_intro.css
+++ b/static/css/equipment_intro/equipment_intro.css
@@ -17,7 +17,7 @@
 }
 
 .tablestyle {
-    border-style: solid;
+    border: 2px solid;
     border-color: #000000;
     border-collapse: collapse;
     margin: 40px auto 110px;
