--- a/FrontEnd/templates/FrontEnd/index/index.html
+++ b/FrontEnd/templates/FrontEnd/index/index.html
@@ -11,5 +11,6 @@
 <!-- 會匯入其他頁面 -->
 {% include 'FrontEnd/course_introduction_section/course_introduction_section.html' %}
 {% include 'FrontEnd/about_us_section/about_us_section.html' %}
+{% include 'FrontEnd/new_section/new_section.html' %}
 
 {% endblock %}
