--- a/static/scss/all.scss
+++ b/static/scss/all.scss
@@ -2,3 +2,4 @@
 @import 'pages/layout';
 @import 'pages/course_introduction_section';
 @import 'pages/about_us_section';
+@import 'pages/new_section';
