--- a/static/scss/all.scss
+++ b/static/scss/all.scss
@@ -3,3 +3,4 @@
 @import 'pages/course_introduction_section';
 @import 'pages/about_us_section';
 @import 'pages/new_section';
+@import 'pages/professional_field_section';
