成員、課程列表、空間介紹、相關辦法 資料顯示完成

--- a/FrontEnd/templates/FrontEnd/download/download.html
+++ b/FrontEnd/templates/FrontEnd/download/download.html
@@ -37,7 +37,7 @@
         <tbody style="height: auto;">
             <tr style="height: auto; line-height: 32px;" v-for="item in downloadListSearch">
                 <td style="text-align: justify;" @click="onClick(item.id)"><span class="type-3">${ item.title }</span></td>
-                <td class="type-1">${item.typeshow}</td>
+                <td class="type-1">${item.type}</td>
                 <td style="text-align: left;padding-left: 25px;">${item.content}</td>
                 <td style="text-align: justify;">${item.update_date}</td>
                 <td style="text-align: center;" class="type-2" @click="onClick(item.id)">
