--- a/FrontEnd/templates/FrontEnd/new_section/new_section.html
+++ b/FrontEnd/templates/FrontEnd/new_section/new_section.html
@@ -3,42 +3,24 @@
         <div class="container text-center">
             <h2 class="title">最新消息</h2>
             <ul class="news-section list-unstyled">
+                {% for n in news %}
                 <li class="row my-1">
                     <div class="col-sm-6">
-                        <h4>2022/01/29</h4>
+                        <h4>{{ n.created_date}}</h4>
                     </div>
                     <div class="col-sm-6">
-                        <h4>最新消息標題</h4>
+                        <h4>{{ n.title}}</h4>
                     </div>
                 </li>
-                <li class="row my-1">
-                    <div class="col-sm-6">
-                        <h4>2022/01/24</h4>
-                    </div>
-                    <div class="col-sm-6">
-                        <h4>最新消息標題</h4>
-                    </div>
-                </li>
-                <li class="row my-1">
-                    <div class="col-sm-6">
-                        <h4>2022/01/02</h4>
-                    </div>
-                    <div class="col-sm-6">
-                        <h4>最新消息標題</h4>
-                    </div>
-                </li>
+                {% endfor %}
             </ul>
 
             <ul class="pagination">
+                {% for i in news.paginator.page_range %}
                 <li class="page-item active">
-                    <a class="page-link" href="#"></a>
+                    <a class="page-link" href="?page={{ i }}"></a>
                 </li>
-                <li class="page-item">
-                    <a class="page-link" href="#"></a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#"></a>
-                </li>
+                {% endfor %}
             </ul>
             <!-- 參考 https://ithelp.ithome.com.tw/articles/10196973 -->
         </div>
