--- a/FrontEnd/templates/FrontEnd/news_list/news_list.html
+++ b/FrontEnd/templates/FrontEnd/news_list/news_list.html
@@ -19,16 +19,16 @@
     <div class="rightspace">
 
         <span class="fa-solid fa-wrench"></span>
-        <div class="wire" @click="changeType('1')">
+        <div class="wire" @click="changeType('最新消息')">
             <p class="content-1">最新消息</p>
         </div>
         <span class="fa-solid fa-gavel"></span>
-        <div class="wire" @click="changeType('2')">
+        <div class="wire" @click="changeType('學生活動')">
             <p class="content-1">學生活動</p>
         </div>
 
         <span class="fa-solid fa-hammer"></span>
-        <p class="content-1" @click="changeType('3')">學術動態</p>
+        <p class="content-1" @click="changeType('學術動態')">學術動態</p>
     </div>
     <input class="searchbox" type="text" v-model="search" placeholder="Search.." />
 
