首頁圖片對應到專案領域小組、修正搜尋

--- a/FrontEnd/templates/FrontEnd/download/download.html
+++ b/FrontEnd/templates/FrontEnd/download/download.html
@@ -88,7 +88,7 @@
                     })
                 } else {
                     return this.downloadList.filter(box => {
-                        return box.type.includes(this.type)
+                        return box.type.includes(this.type)&&(box.title.includes(this.search)||box.content.includes(this.search))
                     })
                 }
             }
