--- a/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
+++ b/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
@@ -3,25 +3,25 @@
         <section>
             <h2 class="title text-center">專業領域小組</h2>
             <div class="row" style="height:50vh">
-                <a href="#" class="col-sm-6 bg-cover h-100"
+                <a href="{% url 'members_intro' %}" class="col-sm-6 bg-cover h-100"
                     style="background-image: url(https://picsum.photos/1000/1000?random=8);">
                     <h3 class="professional-title">召集人/副召集人</h3>
                 </a>
                 <div class="col-sm-6">
                     <div class="row" style="height:50vh">
-                        <a href="#" class="col-sm-6 bg-cover h-50"
+                        <a href="{% url 'classshow' 1 %}" class="col-sm-6 bg-cover h-50"
                             style="background-image: url(https://picsum.photos/1000/1000?random=9);">
                             <h3 class="professional-title">智慧製造</h3>
                         </a>
-                        <a href="#" class="col-sm-6 bg-cover h-50"
+                        <a href="{% url 'classshow' 2 %}" class="col-sm-6 bg-cover h-50"
                             style="background-image: url(https://picsum.photos/1000/1000?random=10);">
                             <h3 class="professional-title">資訊通</h3>
                         </a>
-                        <a href="#" class="col-sm-6 bg-cover h-50"
+                        <a href="{% url 'classshow' 3 %}" class="col-sm-6 bg-cover h-50"
                             style="background-image: url(https://picsum.photos/1000/1000?random=11);">
                             <h3 class="professional-title">機器人</h3>
                         </a>
-                        <a href="#" class="col-sm-6 bg-cover h-50"
+                        <a href="{% url 'classshow' 4 %}" class="col-sm-6 bg-cover h-50"
                             style="background-image: url(https://picsum.photos/1000/1000?random=12);">
                             <h3 class="professional-title">創課</h3>
                         </a>
