--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -66,7 +66,7 @@
         delimiters: ['${', '}'],
         data: {
             search: "",
-            type: "",
+            type: "{{ coursetype }}",
             classbox: []
         },
         mounted: function () {
