調整課程圖片大小/單頁間距/download :focus style

--- a/FrontEnd/templates/FrontEnd/download/download.html
+++ b/FrontEnd/templates/FrontEnd/download/download.html
@@ -14,12 +14,14 @@
 
 <section class="container-1" id="app">
     <div class="rightspace">
-        <div class="text-1" @click="changeType('專業領域小組')">專業領域小組</div>
-        <div class="text-2" @click="changeType('課程')">課程</div>
-        <div class="text-3" @click="changeType('設備及物品借用')">設備及物品借用</div>
+        <div class="wire"><div class="text-1" @click="changeType('專業領域小組')">專業領域小組</div></div>
+        <div class="wire"><div class="text-2" @click="changeType('課程')">課程</div></div>
+        <div class="wire"><div class="text-3" @click="changeType('設備及物品借用')">設備及物品借用</div></div>
         <div class="text-4" @click="changeType('TA實習申請')">TA實習申請</div>
     </div>
 
+
+    
 
     <input class="searchbox" type="text" v-model="search" placeholder="Search .." />
 
