--- a/static/css/download/download.css
+++ b/static/css/download/download.css
@@ -49,61 +49,91 @@
     float: right;
     font-size: 20px;
     line-height: 23px;
-    color: #ffffff;
+    color: #000000;
     margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+.wire {
+    border-right: 2px solid #C4C4c4;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border-radius: 0px;
+    margin-right: 5px;
 }
 
 .text-1 {
     float: left;
     width: 140px;
-    height: 30px;
-    border-radius: 4px;
-    background-color: #FF4F18;
+    height: 28px;
     margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
+/*  focus設定
+.text-1 :focus {
+    background-color: #FF4F18;
+    border-radius: 4px;
+    color: #ffffff;
+}
+*/
 
 .text-2 {
     float: left;
     width: 50px;
-    height: 30px;
-    border-radius: 4px;
-    background-color: #449BEB;
+    height: 28px;
     margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
+/*  focus設定
+.text-2 :focus{
+    background-color: #449BEB;
+    border-radius: 4px;
+    color: #ffffff;
+}
+*/
 
 .text-3 {
     float: left;
     width: 155px;
-    height: 30px;
-    border-radius: 4px;
-    background-color: #A237C8;
+    height: 28px;
     margin-right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
+/*  focus設定
+.text-3 :focus{
+    background-color: #A237C8;
+    border-radius: 4px;
+    color: #ffffff;
+}
+*/
 
 .text-4 {
     float: left;
-    width: 140px;
-    height: 30px;
-    border-radius: 4px;
-    background-color: #37C894;
-    margin-right: 8px;
+    width: 130px;
+    height: 28px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
+/*  focus設定
+.text-4 :focus{
+    background-color: #37C894;
+    border-radius: 4px;
+    color: #ffffff;
+}
+*/
+
 .type-3{
     cursor: pointer;
 }
