--- a/MakerCenter/collect_static/scss/all.css
+++ b/MakerCenter/collect_static/scss/all.css
@@ -7374,4 +7374,4 @@ section {
   bottom: 0;
   color: white; }
 
-/*# sourceMappingURL=../../../../static/scss/all.css.map */
+/*# sourceMappingURL=all.css.map */
