--- a/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
+++ b/FrontEnd/templates/FrontEnd/professional_field_section/professional_field_section.html
@@ -1,28 +1,29 @@
+{% load static %}
 <section class="professional">
     <div class="container">
         <section>
             <h2 class="title text-center">專業領域小組</h2>
             <div class="row" style="height:50vh">
                 <a href="{% url 'members_intro' %}" class="col-sm-6 bg-cover h-100"
-                    style="background-image: url(https://picsum.photos/1000/1000?random=8);">
-                    <h3 class="professional-title">召集人/副召集人</h3>
+                    style="background-image:url({% static 'img/index/host.jpg' %})">
+                    <h3 class="professional-title" style="color: black;" >召集人/副召集人</h3>
                 </a>
                 <div class="col-sm-6">
                     <div class="row" style="height:50vh">
                         <a href="{% url 'classshow' 1 %}" class="col-sm-6 bg-cover h-50"
-                            style="background-image: url(https://picsum.photos/1000/1000?random=9);">
+                            style="background-image:url({% static 'img/index/SmartManufacturing.jpg' %});">
                             <h3 class="professional-title">智慧製造</h3>
                         </a>
                         <a href="{% url 'classshow' 2 %}" class="col-sm-6 bg-cover h-50"
-                            style="background-image: url(https://picsum.photos/1000/1000?random=10);">
+                            style="background-image: url({% static 'img/index/Infocom.jpg' %});">
                             <h3 class="professional-title">資訊通</h3>
                         </a>
                         <a href="{% url 'classshow' 3 %}" class="col-sm-6 bg-cover h-50"
-                            style="background-image: url(https://picsum.photos/1000/1000?random=11);">
+                            style="background-image: url({% static 'img/index/robot.jpg' %});">
                             <h3 class="professional-title">機器人</h3>
                         </a>
                         <a href="{% url 'classshow' 4 %}" class="col-sm-6 bg-cover h-50"
-                            style="background-image: url(https://picsum.photos/1000/1000?random=12);">
+                            style="background-image: url({% static 'img/index/Maker.jpg' %});">
                             <h3 class="professional-title">創課</h3>
                         </a>
                     </div>
@@ -32,7 +33,8 @@
         <section>
             <h2 class="title text-center">元宇宙 最新科技</h2>
             <div class="text-center">
-                <img src="https://picsum.photos/1000/1000?random=13" class="img-fluid" alt="最新科技">
+                <img src="{% static 'img/index/FormerUniverse.jpg' %}" style="width: 100%;height: 100%;"
+                    class="img-fluid" alt="最新科技">
             </div>
             <h4 class="text-right">
                 <a href="#" class="text-dark"> > 快速了解他們！</a>
