--- a/MakerCenter/staticfiles/scss/all.css
+++ b/MakerCenter/staticfiles/scss/all.css
@@ -7374,4 +7374,4 @@ section {
   bottom: 0;
   color: white; }
 
-/*# sourceMappingURL=all.css.map */
+/*# sourceMappingURL=../../../../static/scss/all.css.map */
